--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Your Name",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^29.5.13",
     "css-loader": "^6.5.1",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.2.6",
