--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,14 @@
     "target": "ES6",
     "module": "ES6",
     "outDir": "./dist",
-    "rootDir": "./src/ts",
+    "rootDir": "./src",
+    "baseUrl": "./src",
+    "paths": {
+      "@api/*": ["ts/api/*"],
+      "@components/*": ["ts/components/*"],
+      "@utils/*": ["ts/utils/*"],
+      "@types/*": ["ts/types/*"]
+    },
     "strict": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true
