--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "webpack --mode production",
     "dev": "webpack serve --mode development",
-    "start": "npm run dev"
+    "start": "npm run dev",
+    "test": "jest"
   },
   "author": "Your Name",
   "license": "MIT",
@@ -18,6 +19,7 @@
     "typescript": "^4.4.4",
     "webpack": "^5.64.4",
     "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.5.0"
+    "webpack-dev-server": "^4.5.0",
+    "jest": "^27.0.6"
   }
 }
