--- a/package.json
+++ b/package.json
@@ -7,19 +7,31 @@
     "build": "webpack --mode production",
     "dev": "webpack serve --mode development",
     "start": "npm run dev",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint 'src/**/*.{js,ts}'",
+    "lint:fix": "eslint 'src/**/*.{js,ts}' --fix"
   },
   "author": "Your Name",
   "license": "MIT",
   "devDependencies": {
     "@types/jest": "^29.5.13",
+    "@typescript-eslint/eslint-plugin": "^8.8.0",
+    "@typescript-eslint/parser": "^8.8.0",
     "css-loader": "^6.5.1",
-    "style-loader": "^3.3.1",
-    "ts-loader": "^9.2.6",
+    "eslint": "^9.11.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "typescript": "^4.4.4",
-    "webpack": "^5.64.4",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.5.0",
-    "jest": "^27.0.6"
+    "webpack": "^5.0.0",
+    "webpack-cli": "^4.0.0",
+    "webpack-dev-server": "^4.0.0",
+    "ts-loader": "^9.0.0",
+    "style-loader": "^3.0.0",
+    "jest": "^27.0.0",
+    "prettier": "^2.0.0"
+  },
+  "dependencies": {
+    "cors": "^2.8.5"
   }
 }
