First pack to dispay widget onthe page

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,5 @@
     "forceConsistentCasingInFileNames": true
   },
   "exclude": ["node_modules"],
-  "include": ["src/ts/**/*", "src/components", "src/api", "src/state"]
+  "include": ["src/**/*"]
 }
