--- a/package.json
+++ b/package.json
@@ -11,25 +11,26 @@
     "lint": "eslint 'src/**/*.{js,ts}'",
     "lint:fix": "eslint 'src/**/*.{js,ts}' --fix"
   },
-  "author": "Your Name",
+  "author": "Romain BOBOE",
   "license": "MIT",
   "devDependencies": {
     "@types/jest": "^29.5.13",
     "@typescript-eslint/eslint-plugin": "^8.8.0",
     "@typescript-eslint/parser": "^8.8.0",
-    "css-loader": "^6.5.1",
+    "css-loader": "^6.11.0",
     "eslint": "^9.11.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "jest": "^27.0.0",
+    "prettier": "^2.0.0",
+    "style-loader": "^3.3.4",
+    "to-string-loader": "^1.2.0",
+    "ts-loader": "^9.0.0",
     "typescript": "^4.4.4",
     "webpack": "^5.0.0",
     "webpack-cli": "^4.0.0",
-    "webpack-dev-server": "^4.0.0",
-    "ts-loader": "^9.0.0",
-    "style-loader": "^3.0.0",
-    "jest": "^27.0.0",
-    "prettier": "^2.0.0"
+    "webpack-dev-server": "^4.0.0"
   },
   "dependencies": {
     "cors": "^2.8.5"
