--- a/package.json
+++ b/package.json
@@ -32,10 +32,11 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "jest": "^27.0.0",
-    "prettier": "^2.0.0",
-    "typescript": "^4.4.4",
-    "vite": "^5.0.0"
+    "jest": "^29.7.0",
+    "prettier": "^3.2.0",
+    "terser": "^5.36.0",
+    "typescript": "^5.4.0",
+    "vite": "^5.4.2"
   },
   "dependencies": {
     "cors": "^2.8.5"
