--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,30 @@
+// Start of Selection
 {
   "compilerOptions": {
-    "target": "ES6",
-    "module": "ES6",
-    "outDir": "./dist",
-    "rootDir": "./src",
-    "baseUrl": "./src",
+    "target": "ES2020",
+    "useDefineForClassFields": true,
+    "moduleResolution": "bundler",
+    "module": "ESNext",
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "skipLibCheck": true,
+    "isolatedModules": true,
+    "moduleDetection": "force",
+    "noEmit": true,
+    "baseUrl": "./src",
+    "typeRoots": ["./src/types", "./node_modules/@types"],
     "paths": {
-      "@api/*": ["ts/api/*"],
-      "@components/*": ["ts/components/*"],
-      "@utils/*": ["ts/utils/*"],
-      "@types/*": ["ts/types/*"]
+      "@api/*": ["api/*"],
+      "@components/*": ["components/*"],
+      "@utils/*": ["utils/*"],
+      "@types/*": ["types/*"]
     },
     "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true
   },
   "exclude": ["node_modules"],
-  "include": ["src/**/*"]
+  "include": ["src"]
 }
