--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "prettier": "^3.2.0",
     "terser": "^5.36.0",
     "typescript": "^5.4.0",
-    "vite": "^5.4.2"
+    "vite": "^5.4.2",
+    "vite-plugin-css-injected-by-js": "^3.5.2"
   },
   "dependencies": {
     "cors": "^2.8.5"
