--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "preview": "vite preview",
     "test": "jest",
     "lint": "eslint 'src/**/*.{js,ts}'",
-    "lint:fix": "eslint 'src/**/*.{js,ts}' --fix"
+    "lint:fix": "eslint 'src/**/*.{js,ts}' --fix",
+    "watch": "node watch-build.js"
   },
   "author": "Romain BOBOE",
   "license": "MIT",
@@ -37,7 +38,8 @@
     "terser": "^5.36.0",
     "typescript": "^5.4.0",
     "vite": "^5.4.2",
-    "vite-plugin-css-injected-by-js": "^3.5.2"
+    "vite-plugin-css-injected-by-js": "^3.5.2",
+    "chokidar": "^3.5.3"
   },
   "dependencies": {
     "cors": "^2.8.5"
